--- a/discordrules.html
+++ b/discordrules.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<title>ServerPred Rules</title>
+<title>ServerPred Rules</title>
+<meta charset="UTF-8">
+<meta name="description" content="Rules for SciPred's Official Server.">
+<meta name="author" content="SciPred">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 html, body {
 	margin-left: 15px;
@@ -102,7 +106,7 @@ Do not abuse your moderation abilities. Do not use them to blackmail or dox peop
 <br>
 No inviting/kicking bots without sufficient permission from the owner.
 <br>
-If you notice any one of our staff misbehaving, report immediately to the superior administration.
+If you notice any one of our staff misbehaving, report immediately to superior administration or directly to SciPred.
 
 
 
@@ -142,7 +146,7 @@ You are not allowed to use loopholes, false arguments and the like to escape a d
 <br>
 - Idiocy: "I don't understand."
 <br>
-- Memeing: "It's just a joke bro"
+- Memeing: "I was just joking bro"
 <br>
 - Privacy: "Clearly this is my business, not yours."
 <br>
