--- a/discordrules.html
+++ b/discordrules.html
@@ -11,6 +11,8 @@ html, body {
 	margin-left: 15px;
 	margin-right: 15px;
 	font-family: sans-serif;
+	color: white;
+	background: #222;
 }
 </style>
 </head>
@@ -23,7 +25,9 @@ As a member or moderator, either temporary or permanent, you are required to fol
 <h2>I. ACCOUNT</h2>
 You will be banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology, uncontrolled trolling or racism.
 <br>
-You may either be kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server. You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server.
+You may either be kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server.
+<br>
+You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server.
 
 
 
@@ -104,7 +108,11 @@ No creating, modifying, or deleting roles, channels, invites and categories with
 <br>
 Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse.
 <br>
-No inviting/kicking bots without sufficient permission from the owner.
+No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner.
+<br>
+Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 infractions the targeted staff member is permanently demoted and muted for one week.
+<br>
+However, if the level of the violation caused by the staff is extreme, staff will be immediately banned from the server (as well as rickrolled to set an example).
 <br>
 If you notice any one of our staff misbehaving, report immediately to superior administration or directly to SciPred.
 
@@ -149,6 +157,8 @@ You are not allowed to use loopholes, false arguments and the like to escape a d
 - Memeing: "I was just joking bro"
 <br>
 - Privacy: "Clearly this is my business, not yours."
+<br>
+- Private Interpretation: "According to me, this doesn't count."
 <br>
 - Public Interpretation: "According to this person/these people, this doesn't count."
 <br>
