--- a/discordrules.html
+++ b/discordrules.html
@@ -108,6 +108,8 @@ No creating, modifying, or deleting roles, channels, invites and categories with
 <br>
 Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse.
 <br>
+Punishments for misbehavers that are not staff can vary depending on the offense. The minimum amount of time suggested for a manual mute is 1 hour. As the misbehaver commits more offenses, the mute duration is added. The mute duration progression is 1h-2h-4h-6h-12h-1d-3d-7d-14d. After 9 manual mutes, the offender is either kicked or banned. If it is a ban, it is not appealable. Any staff caught trying to make the ban appealable will be demoted.
+<br>
 No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner.
 <br>
 Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 infractions the targeted staff member is permanently demoted and muted for one week.
