slightly updated rules

--- a/discordrules.html
+++ b/discordrules.html
@@ -11,8 +11,8 @@ html, body {
 	margin-left: 15px;
 	margin-right: 15px;
 	font-family: sans-serif;
-	color: white;
-	background: #222;
+	color: rgb(169, 238, 169);
+	background: rgb(39, 34, 34);
 }
 </style>
 </head>
@@ -48,7 +48,7 @@ No causing drama, self-pity, intended pessimism, existential crises, or false op
 <br>
 Respect each and every one's principles, philosophies, conditions, religion, and race.
 <br>
-No blackmailing or doxxing.
+No blackmailing or doxxing members.
 <br>
 Refrain from sharing private information with others.
 <br>
@@ -110,7 +110,7 @@ Do not abuse your moderation abilities. Do not use them to blackmail or dox peop
 <br>
 Punishments for misbehavers that are not staff can vary depending on the offense. The minimum amount of time suggested for a manual mute is 1 hour. As the misbehaver commits more offenses, the mute duration is added. The mute duration progression is 1h-2h-4h-6h-12h-1d-3d-7d-14d. After 9 manual mutes, the offender is either kicked or banned. If it is a ban, it is not appealable. Any staff caught trying to make the ban appealable will be demoted.
 <br>
-No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner.
+No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference.
 <br>
 Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 infractions the targeted staff member is permanently demoted and muted for one week.
 <br>
