--- a/stringtool/index.html
+++ b/stringtool/index.html
@@ -201,7 +201,7 @@ button {
 	<p style="color:red">When an error occurs, you will see an icon at the bottom right of the page. Click on the icon to see what the error was. Custom errors happen when any of these things happen: variables are edited, functions cannot be executed, or inputs are wrong. Other errors - general ones - will be displayed in the console (if your browser has one, such as Google).</p>
 	<p style="color:red">However, if your browser does not support the function window.alert, try opening this page in another browser. If you don't know which browsers have support, search for "js window alert browser support". (Only if you ever bother with looking at the error messages.)</p>
 	<p style="color:#ccc">It's a bit pointless - but it works.</p>
-	<p style="color:blue;font-weight:bold;">If you have any suggestions for me, contact or email me at either science.mcpe@gmail.com or mrsimple.mcpe@gmail.com if you don't ever bother.</p>
+	<p style="color:blue;font-weight:bold;">If you have any suggestions for me, contact or email me at either science.mcpe@gmail.com if you don't ever bother.</p>
 	<h3 style="color:#ddd">NEW ON THIS VERSION:</h3>
 	<p>- Added occurence selection in Replace Menu.</p>
 	<p>- Added character counter below the string input.</p>
