updated rules for dord

--- a/discordrules.html
+++ b/discordrules.html
@@ -129,7 +129,7 @@ If the giveaway host is online and you have DM'd them but they have not given th
 
 
 
-<h2>Section VII: Loopholes, Bypasses and Fallacies</h2>
+<h2>V. LOOPHOLES, BYPASSES, AND FALLACIES</h2>
 You are not allowed to use loopholes, false arguments and the like to escape a designated consequence for breaking a rule. These include:
 <br>
 - Attribution: "If he did it in another server without getting banned then I can do it in this server."
